# wonder

./: .gitignore  CLAUDE.md  PROJECT_ARCHITECTURE.md  README.md  electron-builder.yml  index.html  installer.nsi  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.server.json  vite.config.ts
backend/: main.py  requirements.txt
backend/agents/: __init__.py  base.py  literature.py  orchestrator.py  policy.py  qa.py  qa_policy.py  readme_advisor.py  relation.py  research_card.py  writing.py
backend/api/: analysis.py  config.py  history.py  knowledge.py  readme_advisor.py  research_cards.py
backend/core/: __init__.py  config.py  embedding.py  history.py  llm_client.py  storage.py
backend/models/: schemas.py
backend/rag/: __init__.py  indexer.py  mineru_client.py  paper_chunker.py  paper_cleaner.py  paper_parser.py  paper_types.py  query_normalizer.py  ranking.py  research_card_indexer.py  research_card_retriever.py  retriever.py
backend/tests/: test_ai_gateway.py  (+16 more)
docs/: architecture-multi-agent-and-rag.md  test-plan.md
electron/: main.ts  preload.ts
frontend/: index.html  package-lock.json  package.json
scripts/: after-pack.js  build-electron.cjs  git-push.sh  migrate-data.ts  rebuild-better-sqlite3.cjs
server/: index.ts
src/: App.tsx  App.vue  env.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: agents.test.ts  chunker.test.ts  file-reader.test.ts  history.test.ts  llm-client.test.ts  test_config.py  test_history.py
(+171 files in other folders)
