[package]
name = "note-forge"
version = "2.0.0"
description = "Note-Forge desktop research assistant"
authors = ["Note-Forge"]
edition = "2021"

[lib]
name = "note_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
